# dinner-planner

./: .gitignore  API.md  ARCHITECTURE.md  COMPLETE-PLATFORM-SUMMARY.md  DEPLOY-INSTRUCTIONS.md  DEPLOYMENT-BLOCKERS.md  DEPLOYMENT.md  FLY-IO-DEPLOY.md  OPERATIONAL-RUNBOOK.md  PRODUCTION-READY-CHECKLIST.md  README.md  deploy-now.sh  package.json  railway.json  test_e2e.py  tsconfig.json
admin/: package-lock.json  package.json  tailwind.config.ts
backend/: Dockerfile  README.md  alembic.ini  dinner_planner.db  fly.toml  pyproject.toml  requirements.txt  seed_data.py  seed_reviews.py  test_dinner_planner.db  vercel.json
backend/.venv_check/: pyvenv.cfg
backend/alembic/: env.py
backend/alembic/versions/: 20260301_0001_initial_phase2a_schema.py  new_migration.py
backend/app/: main.py
backend/app/api/routes/: bookings.py  restaurants.py  users.py  webhooks.py
backend/app/core/: config.py  security.py
backend/app/db/: metadata.py  session.py
backend/app/models/: __init__.py  booking.py  enums.py  invoice.py  restaurant.py  review.py  user.py
backend/app/schemas/: booking.py  invoice.py  restaurant.py  review.py  user.py  webhook.py
backend/app/services/: booking_service.py  invoice_service.py  nlp_service.py  search_service.py
backend/tests/: conftest.py  test_e2e_phase2a.py  test_reviews_api.py  test_security_api.py
backend/twilio_test/: README.md  TWILIO_SETUP.md  __init__.py  mock_data.json  mock_data.py  simulator.py  test_webhook.py
bot/: index.ts
docs/: BUILD_BRIEF.md  MVP_SPEC.md
frontend/: .env.example  README.md  package-lock.json  (+2 more)
(+143 files in other folders)
